--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,6 @@ isort==5.12.0
 lazy-object-proxy==1.9.0
 mccabe==0.7.0
 mypy-extensions==1.0.0
-nbtlib==2.0.4
 numpy==1.24.2
 packaging==23.0
 pathspec==0.11.1
@@ -15,6 +14,7 @@ platformdirs==3.1.1
 pylint==2.17.1
 pytoolconfig==1.2.5
 rope==1.7.0
+snbtlib==0.0.6
 tomli==2.0.1
 tomlkit==0.11.6
 typing-extensions==4.5.0
